--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
   },
   "autoload": {
     "psr-4": {
-      "EndorphinStudio\\Detector":  "src"
+      "EndorphinStudio\\Detector\\Data\\":  "src/Data",
+      "EndorphinStudio\\Detector\\Storage\\":  "src/Storage",
+      "EndorphinStudio\\Detector\\Exception\\":  "src/Exception"
     }
   }
 }
