--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   ],
   "require": {
     "php": ">=7.0",
+    "endorphin-studio/browser-detector-tools": ">=1.0.0",
     "symfony/yaml": ">=v3.4.14",
     "symfony/http-foundation": ">=v3.4.14"
   },
