--- a/var/yaml/robot.yml
+++ b/var/yaml/robot.yml
@@ -1,8 +1,8 @@
 ########################################################################
 # @author Serhii Nekhaienko <sergey.nekhaenko@gmail.com>
 # @license GPL
-# @copyright Serhii Nekhaienko &copy 2018
-# @version 1.0.0a
+# @copyright Serhii Nekhaienko &copy 2018-2019
+# @version 1.0.1
 # @project endorphin-studio/browser-detector-data
 ########################################################################
 robot:
