--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "endorphin-studio/browser-detector-data",
   "description": "Data for endorphin-studio/browser-detector",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=7.0",
-    "endorphin-studio/browser-detector-tools": ">=1.0.0",
+    "endorphin-studio/browser-detector-tools": "dev-feature-distilnetworks",
     "symfony/yaml": "v3.4.14",
     "symfony/http-foundation": "v3.4.14"
   },
