GH-26 - Add New Robots Detection (Source: distilnetworks) - batch 2 - var/yaml refactoring

--- a/var/yaml/robots/bad_robots.yaml
+++ b/var/yaml/robots/bad_robots.yaml
@@ -16,3 +16,8 @@ robot:
         - PR-CY-RU
         - ADmantX
         - betaBot
+        - BrokenLinkCheck
+        - CareerBot
+        - Cesar Job Such Maschine
+        - Clickagy Intelligence Bot
+        - Cliqz
