GH-26 - Add New Robots Detection (Source: distilnetworks) - add detection:     + Cloud mapping     + Cloudinary     + CloudServerMarketSpider     + CMS Crawler     + CoinCornerBot     + CommaFeed     + contentDetection     + ConveraCrawler     + CorpusCrawler

--- a/var/yaml/robots/bad_robots.yaml
+++ b/var/yaml/robots/bad_robots.yaml
@@ -21,3 +21,11 @@ robot:
         - Cesar Job Such Maschine
         - Clickagy Intelligence Bot
         - Cliqz
+        - Cloud mapping
+        - Cloudinary
+        - CloudServerMarketSpider
+        - CMS Crawler
+        - CoinCornerBot
+        - CommaFeed
+        - contentDetection
+        - CorpusCrawler
