--- a/var/yaml/robots/homepages.yml
+++ b/var/yaml/robots/homepages.yml
@@ -52,3 +52,12 @@ robot:
         Cesar: "http://cesar.de"
         Clickagy: "http://clickagy.com"
         Cliqz: "http://cliqz.com"
+        PDR Labs: "http://pdrlabs.net"
+        Cloudinary Ltd: "http://cloudinary.com"
+        Cloud Server Market: "http://www.cloudservermarket.com"
+        Viderem AB: "http://viderem.se"
+        Coin Corner Ltd: "https://www.coincorner.com"
+        Comma Feed: "https://www.commafeed.com"
+        Intelligence GmbH: "http://www.mindup.de"
+        Convera Corporation: "http://www.hugedomains.com"
+        NLP: "https://nlp.fi.muni.cz"
